<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/grey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/dark_blue"
        android:gravity="center_horizontal"
        android:text="@string/activity_form_title"
        android:textColor="@android:color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        android:padding="7pt"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="7pt"
        android:layout_marginHorizontal="0pt"
        android:background="@drawable/gradient_background"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/edit_text_background"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:id="@+id/name"
            android:hint="@string/name_hint"
            android:padding="6pt"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:id="@+id/surname"
            android:hint="@string/surname_hint"
            android:padding="6pt"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20dp"
                android:hint="@string/password_hint"
                android:padding="6pt"/>

            <ImageView
                android:id="@+id/show_password"
                android:layout_width="24pt"
                android:layout_height="24pt"
                android:padding="6pt"
                android:src="@drawable/view_password"
                android:contentDescription="mostra password"
                android:layout_gravity="end|center"/>

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_rules"
            android:textSize="7pt"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textColor="@color/red"
            android:visibility="gone" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="8pt"/>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="24dp"
            android:textStyle="bold"
            android:padding="7dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="7pt"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_registrato"
            android:textColor="@color/light_blue"
            android:gravity="center"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registrati"
            android:textSize="22dp"
            android:textColor="@color/dark_blue"
            android:background="@android:color/transparent"
            android:padding="4dp"/>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

</LinearLayout>
