<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    <include
        android:id="@+id/include_layout_topbar"
        layout="@layout/activity_top_base"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edit_text_background"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue"
                android:gravity="center_horizontal"
                android:text="@string/aggiungi_esame"
                android:textSize="24dp"
                android:textStyle="bold"
                android:paddingVertical="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exam_name"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/exam_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20dp"
                android:hint="@string/exam_hint"
                android:padding="6pt"/>

            <TextView
                android:id="@+id/error_nome_esame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="@string/error"
                android:textSize="28sp"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5pt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voto"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/voto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20dp"
                android:hint="@string/voto_hint"
                android:padding="6pt"/>

            <TextView
                android:id="@+id/error_voto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="@string/error"
                android:textSize="28sp"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5pt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cfu"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/cfu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20dp"
                android:hint="@string/cfu_hint"
                android:padding="6pt"/>

            <TextView
                android:id="@+id/error_cfu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="@string/error"
                android:textSize="28sp"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5pt"/>

            <Button
                android:id="@+id/add_exam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:gravity="center"
                android:text="@string/aggiungi"
                android:textSize="22dp"
                android:textStyle="bold"
                android:padding="7dp"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>