<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/dark_blue">

        <ImageView
            android:id="@+id/esci"
            android:layout_width="25pt"
            android:layout_height="wrap_content"
            android:padding="5pt"
            android:contentDescription="logout"
            android:layout_gravity="start|center"
            android:clickable="true"
            android:src="@drawable/logout_icon_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/dark_blue"
            android:gravity="right|center"
            android:text="@string/activity_form_title"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:padding="7pt"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="7pt"
        android:layout_marginHorizontal="0pt"
        android:background="@drawable/gradient_background"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/quadrante_background"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/media_ar"
                            android:textColor="@color/light_blue"
                            android:textSize="17dp" />

                        <TextView
                            android:id="@+id/textViewMediaAritmetica"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="30dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/media_po"
                            android:textColor="@color/light_blue"
                            android:textSize="17dp" />

                        <TextView
                            android:id="@+id/textViewMediaPonderata"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="30dp" />

                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/voto_laurea"
                        android:textColor="@color/light_blue"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewVotoDiLaurea"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="35dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_add" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exam_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>